--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ header button:hover{
     opacity: 0.3;
     color: rgba(0,0,0,0.5)
 }
-#trucks h1{
+#offer h1{
     border-bottom: 1px solid red;
 }
 .card img{
