--- a/css/style.css
+++ b/css/style.css
@@ -75,3 +75,17 @@ nav li:hover{
 
   font-weight: bold;
 }
+
+.submitButton {
+  width: 100%;
+  background-color: #00adff;
+  border-width: 0;
+  border-radius: 15px;
+  color: #eee;
+  font-weight: bold;
+  padding: 4px 0;
+}
+
+.submitButton:focus {
+  outline: none;
+}
