--- a/css/style.css
+++ b/css/style.css
@@ -48,8 +48,8 @@ nav li:hover{
 .card-link {
     color: black;
 }
-.hidden-input {
-    display: none;
+.hidden {
+    display: none !important;
 }
 
 .align-right {
@@ -98,4 +98,21 @@ nav li:hover{
 
 .search-page-container {
   margin-top: 60px;
+}
+
+.single-offer-card {
+  display: flex;
+  flex-direction: revert;
+  width: 100%;
+
+  margin-bottom: 20px;
+}
+
+.card-img-top {
+  width: 250px;
+}
+
+.single-offer-card-body {
+  width: 100%;
+  padding: 10px;
 }
