--- a/css/style.css
+++ b/css/style.css
@@ -115,4 +115,18 @@ nav li:hover{
 .single-offer-card-body {
   width: 100%;
   padding: 10px;
+
+  color: #000;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.details, .price {
+  font-size: 0.875rem;
+  line-height: 1rem;
+  margin: 0px;
+  font-weight: bold;
+  margin-bottom: 10px;
 }
