--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ header button:hover{
     border-bottom: 1px solid red;
 }
 .card img{
-    max-height: 250px;
+    height: 190px;
 }
 nav li:hover{
     cursor: pointer;
