--- a/css/selectStyles.css
+++ b/css/selectStyles.css
@@ -1,100 +1,3 @@
-*, *::before, *::after {
-  box-sizing: border-box;
+.styled-select {
+  min-width: 200px;
 }
-:root {
-  --select-border: #d8d8d8;
-  --select-focus: blue;
-  --select-arrow: #929292ee;
-}
-select {
-  appearance: none;
-  background-color: transparent;
-  border: none;
-  padding: 0 1em 0 0;
-  margin: 0;
-  width: 100%;
-  font-family: inherit;
-  font-size: 14px;
-  cursor: inherit;
-  line-height: inherit;
-  z-index: 1;
-  outline: none;
-  color: #595959;
-}
-select::-ms-expand {
-  display: none;
-}
-.select {
-  display: grid;
-  grid-template-areas: "select";
-  align-items: center;
-  position: relative;
-  min-width: 15ch;
-  max-width: 30ch;
-  border: 1px solid var(--select-border);
-  border-radius: 0.25em;
-  padding: 0.25em 0.5em;
-  font-size: 1.25rem;
-  cursor: pointer;
-  line-height: 1.1;
-  background-color: #fff;
-  background-image: linear-gradient(to top, #f9f9f9, #fff 33%);
-  margin-bottom: 30px;
-}
-.select select, .select::after {
-  grid-area: select;
-}
-.select:not(.select--multiple)::after {
-  content: "";
-  justify-self: end;
-  width: 0.8em;
-  height: 0.5em;
-  background-color: var(--select-arrow);
-  clip-path: polygon(100% 0%, 0 0%, 50% 100%);
-}
-select:focus + .focus {
-  position: absolute;
-  top: -1px;
-  left: -1px;
-  right: -1px;
-  bottom: -1px;
-  border: 2px solid var(--select-focus);
-  border-radius: inherit;
-}
-select[multiple] {
-  padding-right: 0;
-  /*
-   * Safari will not reveal an option
-   * unless the select height has room to 
-   * show all of it
-   * Firefox and Chrome allow showing 
-   * a partial option
-   */
-  height: 6rem;
-}
-select[multiple] option {
-  white-space: normal;
-  outline-color: var(--select-focus);
-  /* 
-   * Experimental - styling of selected options
-   * in the multiselect
-   * Not supported crossbrowser
-   */
-}
-.select--disabled {
-  cursor: not-allowed;
-  background-color: #eee;
-  background-image: linear-gradient(to top, #ddd, #eee 33%);
-}
-.selectLabel {
-  font-size: 0.875rem;
-
-  line-height: 1rem;
-
-  margin: 0px;
-
-  font-weight: bold;
-
-  margin-bottom: 10px;
-}
-
